tdf#96113 sw: don't overwrite fo:background-color on ODT frame import

The situation is similar to commit
79fb61efb847405fa47235002b52ee8efad5e339 (tdf#92379: svx: don't
overwrite fo:background-color on ODF import, 2015-08-21), except that
here text frames had the problem of loosing colors when transparency is
set.

Fix the problem by informing getSvxBrushItemFromSourceSet() about if
we're in XML import or not.

Change-Id: Id1adf60b14a3762f0a2a43c49caeed9f6ea039be